--- a/src/app/components/main/carousel/carousel.component.css
+++ b/src/app/components/main/carousel/carousel.component.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: -8px;
   right: 88px;
-  //   color: var(--bs-primary);
+  color: var(--bs-primary);
   color: red;
   padding: 5px 25px;
   border: 1px solid var(--bs-secondary);
