--- a/src/app/components/internal/topnav/topnav.component.html
+++ b/src/app/components/internal/topnav/topnav.component.html
@@ -41,9 +41,11 @@
       <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
         <div class="navbar-nav mx-auto">
           <a routerLink="/home" class="nav-item nav-link active">Home</a>
-          <a href="shop.html" class="nav-item nav-link">Shop</a>
-          <a href="shop-detail.html" class="nav-item nav-link">Shop Detail</a>
-          <div class="nav-item dropdown">
+          <a routerLink="/shop" class="nav-item nav-link">Shop</a>
+          <a routerLink="/single-product" class="nav-item nav-link"
+            >Shop Detail</a
+          >
+          <!-- <div class="nav-item dropdown">
             <a
               href="#"
               class="nav-link dropdown-toggle"
@@ -56,7 +58,7 @@
               <a href="testimonial.html" class="dropdown-item">Testimonial</a>
               <a href="404.html" class="dropdown-item">404 Page</a>
             </div>
-          </div>
+          </div> -->
           <a href="contact.html" class="nav-item nav-link">Contact</a>
         </div>
         <div class="d-flex m-3 me-0">
@@ -67,7 +69,7 @@
           >
             <i class="fas fa-search text-primary"></i>
           </button>
-          <a class="position-relative me-4 my-auto" href="cart.html">
+          <a class="position-relative me-4 my-auto" routerLink="/cart">
             <i class="fa fa-shopping-bag fa-2x"></i>
             <span
               id="cart"
