--- a/front-end/src/app/components/main/fruitshop/fruitshop.component.html
+++ b/front-end/src/app/components/main/fruitshop/fruitshop.component.html
@@ -12,13 +12,23 @@
               <a
                 class="d-flex m-2 py-2 bg-light rounded-pill active"
                 data-bs-toggle="pill"
-                href="#tab-all"
-                id="tab-all"
+                (click)="getAllProducts()"
               >
                 <span class="text-dark" style="width: 130px">All Products</span>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *ngFor="let item of categories">
+              <a
+                class="d-flex m-2 py-2 bg-light rounded-pill"
+                data-bs-toggle="pill"
+                (click)="getProductsByCategoryId(item._id)"
+              >
+                <span class="text-dark" style="width: 130px">{{
+                  item.name
+                }}</span>
+              </a>
+            </li>
+            <!-- <li class="nav-item">
               <a
                 class="d-flex py-2 m-2 bg-light rounded-pill"
                 data-bs-toggle="pill"
@@ -70,72 +80,19 @@
                   >Beauty Products</span
                 >
               </a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
       <div class="tab-content">
-        <div id="tab-1" class="tab-pane fade show p-0 active">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <!-- Hidden product template (with display: none) -->
-              <template id="product-template">
-                <div class="col-md-6 col-lg-4 col-xl-3">
-                  <div class="rounded position-relative fruite-item">
-                    <div class="fruite-img">
-                      <img
-                        class="product-image img-fluid w-100 rounded-top"
-                        alt=""
-                      />
-                    </div>
-                    <div
-                      class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                      style="top: 10px; left: 10px"
-                    >
-                      Fruitables
-                    </div>
-                    <div
-                      class="p-4 border border-secondary border-top-0 rounded-bottom"
-                    >
-                      <h4 class="product-name"></h4>
-                      <p class="product-description"></p>
-                      <div class="d-flex justify-content-between flex-lg-wrap">
-                        <p
-                          class="product-price text-dark fs-5 fw-bold mb-0"
-                        ></p>
-                        <a
-                          class="btn border border-secondary rounded-pill px-3 text-primary add-to-cart"
-                          ><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                          Add to cart</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </template>
-
-              <!-- Product list -->
-              <div id="product-list" class="row">
-                <!-- Products will be inserted here dynamically -->
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="tab-2" class="tab-pane fade show p-0">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <!-- Product list -->
-              <div id="tab-2-product-list" class="row">
-                <!-- Products will be inserted here dynamically -->
-              </div>
-            </div>
-          </div>
-        </div>
         <div id="tab-3" class="tab-pane fade show p-0">
           <div class="row g-4">
             <div class="col-lg-12">
               <div class="row g-4">
-                <div class="col-md-6 col-lg-4 col-xl-3">
+                <div
+                  class="col-md-6 col-lg-4 col-xl-3"
+                  *ngFor="let item of products"
+                >
                   <div class="rounded position-relative fruite-item">
                     <div class="fruite-img">
                       <img
@@ -148,18 +105,19 @@
                       class="text-white bg-secondary px-3 py-1 rounded position-absolute"
                       style="top: 10px; left: 10px"
                     >
-                      Fruits
+                      {{ item.category.name }}
                     </div>
                     <div
                       class="p-4 border border-secondary border-top-0 rounded-bottom"
                     >
-                      <h4>Oranges</h4>
+                      <h4>{{ item.name }}</h4>
                       <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit
-                        sed do eiusmod te incididunt
+                        {{ item.description }}
                       </p>
                       <div class="d-flex justify-content-between flex-lg-wrap">
-                        <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
+                        <p class="text-dark fs-5 fw-bold mb-0">
+                          ₹{{ item.price }}/{{ item.units }}
+                        </p>
                         <a
                           href="#"
                           class="btn border border-secondary rounded-pill px-3 text-primary"
@@ -170,7 +128,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-6 col-lg-4 col-xl-3">
+                <!-- <div class="col-md-6 col-lg-4 col-xl-3">
                   <div class="rounded position-relative fruite-item">
                     <div class="fruite-img">
                       <img
@@ -204,198 +162,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="tab-4" class="tab-pane fade show p-0">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <div class="row g-4">
-                <div class="col-md-6 col-lg-4 col-xl-3">
-                  <div class="rounded position-relative fruite-item">
-                    <div class="fruite-img">
-                      <img
-                        src="assets/img/fruite-item-5.jpg"
-                        class="img-fluid w-100 rounded-top"
-                        alt=""
-                      />
-                    </div>
-                    <div
-                      class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                      style="top: 10px; left: 10px"
-                    >
-                      Fruits
-                    </div>
-                    <div
-                      class="p-4 border border-secondary border-top-0 rounded-bottom"
-                    >
-                      <h4>Grapes</h4>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit
-                        sed do eiusmod te incididunt
-                      </p>
-                      <div class="d-flex justify-content-between flex-lg-wrap">
-                        <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                        <a
-                          href="#"
-                          class="btn border border-secondary rounded-pill px-3 text-primary"
-                          ><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                          Add to cart</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-4 col-xl-3">
-                  <div class="rounded position-relative fruite-item">
-                    <div class="fruite-img">
-                      <img
-                        src="assets/img/fruite-item-4.jpg"
-                        class="img-fluid w-100 rounded-top"
-                        alt=""
-                      />
-                    </div>
-                    <div
-                      class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                      style="top: 10px; left: 10px"
-                    >
-                      Fruits
-                    </div>
-                    <div
-                      class="p-4 border border-secondary border-top-0 rounded-bottom"
-                    >
-                      <h4>Apricots</h4>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit
-                        sed do eiusmod te incididunt
-                      </p>
-                      <div class="d-flex justify-content-between flex-lg-wrap">
-                        <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                        <a
-                          href="#"
-                          class="btn border border-secondary rounded-pill px-3 text-primary"
-                          ><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                          Add to cart</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="tab-5" class="tab-pane fade show p-0">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <div class="row g-4">
-                <div class="col-md-6 col-lg-4 col-xl-3">
-                  <div class="rounded position-relative fruite-item">
-                    <div class="fruite-img">
-                      <img
-                        src="assets/img/fruite-item-3.jpg"
-                        class="img-fluid w-100 rounded-top"
-                        alt=""
-                      />
-                    </div>
-                    <div
-                      class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                      style="top: 10px; left: 10px"
-                    >
-                      Fruits
-                    </div>
-                    <div
-                      class="p-4 border border-secondary border-top-0 rounded-bottom"
-                    >
-                      <h4>Banana</h4>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit
-                        sed do eiusmod te incididunt
-                      </p>
-                      <div class="d-flex justify-content-between flex-lg-wrap">
-                        <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                        <a
-                          href="#"
-                          class="btn border border-secondary rounded-pill px-3 text-primary"
-                          ><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                          Add to cart</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-4 col-xl-3">
-                  <div class="rounded position-relative fruite-item">
-                    <div class="fruite-img">
-                      <img
-                        src="assets/img/fruite-item-2.jpg"
-                        class="img-fluid w-100 rounded-top"
-                        alt=""
-                      />
-                    </div>
-                    <div
-                      class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                      style="top: 10px; left: 10px"
-                    >
-                      Fruits
-                    </div>
-                    <div
-                      class="p-4 border border-secondary border-top-0 rounded-bottom"
-                    >
-                      <h4>Raspberries</h4>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit
-                        sed do eiusmod te incididunt
-                      </p>
-                      <div class="d-flex justify-content-between flex-lg-wrap">
-                        <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                        <a
-                          href="#"
-                          class="btn border border-secondary rounded-pill px-3 text-primary"
-                          ><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                          Add to cart</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-4 col-xl-3">
-                  <div class="rounded position-relative fruite-item">
-                    <div class="fruite-img">
-                      <img
-                        src="assets/img/fruite-item-1.jpg"
-                        class="img-fluid w-100 rounded-top"
-                        alt=""
-                      />
-                    </div>
-                    <div
-                      class="text-white bg-secondary px-3 py-1 rounded position-absolute"
-                      style="top: 10px; left: 10px"
-                    >
-                      Fruits
-                    </div>
-                    <div
-                      class="p-4 border border-secondary border-top-0 rounded-bottom"
-                    >
-                      <h4>Oranges</h4>
-                      <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit
-                        sed do eiusmod te incididunt
-                      </p>
-                      <div class="d-flex justify-content-between flex-lg-wrap">
-                        <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
-                        <a
-                          href="#"
-                          class="btn border border-secondary rounded-pill px-3 text-primary"
-                          ><i class="fa fa-shopping-bag me-2 text-primary"></i>
-                          Add to cart</a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
