home and singleproduct

--- a/front-end/src/app/components/internal/topnav/topnav.component.html
+++ b/front-end/src/app/components/internal/topnav/topnav.component.html
@@ -42,9 +42,9 @@
         <div class="navbar-nav mx-auto">
           <a routerLink="/home" class="nav-item nav-link active">Home</a>
           <a routerLink="/shop" class="nav-item nav-link">Shop</a>
-          <a routerLink="/single-product" class="nav-item nav-link"
+          <!-- <a routerLink="/single-product" class="nav-item nav-link"
             >Shop Detail</a
-          >
+          > -->
           <!-- <div class="nav-item dropdown">
             <a
               href="#"
