--- a/front-end/src/app/components/main/carousel/carousel.component.html
+++ b/front-end/src/app/components/main/carousel/carousel.component.html
@@ -1,4 +1,3 @@
-<!-- Vesitable Shop Start-->
 <div class="container-fluid vesitable py-5">
   <div class="container py-5">
     <h1 class="mb-0">Fresh Organic oils</h1>
@@ -271,3 +270,35 @@
   </div>
 </div>
 <!-- Vesitable Shop End -->
+<!-- <div
+        class="border border-primary rounded position-relative vesitable-item"
+        *ngFor="let item of products"
+      >
+        <div class="vesitable-img">
+          <img
+            src="assets/img/vegetable-item-6.jpg"
+            class="img-fluid w-100 rounded-top"
+            alt=""
+          />
+        </div>
+        <div
+          class="text-white bg-primary px-3 py-1 rounded position-absolute"
+          style="top: 10px; right: 10px"
+        >
+          {{ item.category.name }}
+        </div>
+        <div class="p-4 rounded-bottom">
+          <h4>{{ item.name }}</h4>
+          <p>{{ item.description }}</p>
+          <div class="d-flex justify-content-between flex-lg-wrap">
+            <p class="text-dark fs-5 fw-bold mb-0">
+              ${{ item.price }} / {{ item.units }}
+            </p>
+            <a
+              class="btn border border-secondary rounded-pill px-3 text-primary"
+              ><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to
+              cart</a
+            >
+          </div>
+        </div>
+      </div> -->
