--- a/front-end/src/app/components/main/home/home.component.html
+++ b/front-end/src/app/components/main/home/home.component.html
@@ -2,7 +2,7 @@
 <app-feature></app-feature>
 <app-fruitshop></app-fruitshop>
 <!-- <app-carousel></app-carousel> -->
-<!-- <app-banner></app-banner> -->
-<!-- <app-bestseller></app-bestseller> -->
-<!-- <app-facts></app-facts> -->
-<!-- <app-testimonial></app-testimonial> -->
+<app-banner></app-banner>
+<app-bestseller></app-bestseller>
+<app-facts></app-facts>
+<app-testimonial></app-testimonial>
