--- a/front-end/src/app/components/main/single-product/single-product.component.html
+++ b/front-end/src/app/components/main/single-product/single-product.component.html
@@ -1,14 +1,14 @@
 <!-- Single Product Start -->
-<div class="container-fluid py-5 mt-5">
+<div class="container-fluid py-5 mt-5" *ngIf="product">
   <div class="container py-5 mt-5">
     <div class="row g-4 mb-5">
       <div class="col-lg-8 col-xl-9">
         <div class="row g-4">
           <div class="col-lg-6">
             <div class="border rounded">
-              <a href="#">
+              <a>
                 <img
-                  src="assets/img/single-item.jpg"
+                  src="{{ product.image }}"
                   class="img-fluid rounded"
                   alt="Image"
                 />
@@ -16,9 +16,9 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <h4 class="fw-bold mb-3">Brocoli</h4>
-            <p class="mb-3">Category: Vegetables</p>
-            <h5 class="fw-bold mb-3">3,35 $</h5>
+            <h4 class="fw-bold mb-3">{{ product.name }}</h4>
+            <p class="mb-3">Category: {{ product.category.name }}</p>
+            <h5 class="fw-bold mb-3">{{ product.price }} $</h5>
             <div class="d-flex mb-4">
               <i class="fa fa-star text-secondary"></i>
               <i class="fa fa-star text-secondary"></i>
@@ -27,13 +27,9 @@
               <i class="fa fa-star"></i>
             </div>
             <p class="mb-4">
-              The generated Lorem Ipsum is therefore always free from repetition
-              injected humour, or non-characteristic words etc.
+              {{ product.description | slice : 0 : 100 }}
             </p>
-            <p class="mb-4">
-              Susp endisse ultricies nisi vel quam suscipit. Sabertooth peacock
-              flounder; chain pickerel hatchetfish, pencilfish snailfish
-            </p>
+
             <div class="input-group quantity mb-5" style="width: 100px">
               <div class="input-group-btn">
                 <button
@@ -56,7 +52,6 @@
               </div>
             </div>
             <a
-              href="#"
               class="btn border border-secondary rounded-pill px-4 py-2 mb-4 text-primary"
               ><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to
               cart</a
@@ -77,7 +72,7 @@
                 >
                   Description
                 </button>
-                <button
+                <!-- <button
                   class="nav-link border-white border-bottom-0"
                   type="button"
                   role="tab"
@@ -88,7 +83,7 @@
                   aria-selected="false"
                 >
                   Reviews
-                </button>
+                </button> -->
               </div>
             </nav>
             <div class="tab-content mb-5">
@@ -99,17 +94,10 @@
                 aria-labelledby="nav-about-tab"
               >
                 <p>
-                  The generated Lorem Ipsum is therefore always free from
-                  repetition injected humour, or non-characteristic words etc.
-                  Susp endisse ultricies nisi vel quam suscipit
+                  {{ product.description }}
                 </p>
-                <p>
-                  Sabertooth peacock flounder; chain pickerel hatchetfish,
-                  pencilfish snailfish filefish Antarctic icefish goldeye
-                  aholehole trumpetfish pilot fish airbreathing catfish,
-                  electric ray sweeper.
-                </p>
-                <div class="px-2">
+
+                <!-- <div class="px-2">
                   <div class="row g-4">
                     <div class="col-6">
                       <div
@@ -164,9 +152,9 @@
                       </div>
                     </div>
                   </div>
-                </div>
+                </div> -->
               </div>
-              <div
+              <!-- <div
                 class="tab-pane"
                 id="nav-mission"
                 role="tabpanel"
@@ -234,7 +222,7 @@
                   Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et
                   eos labore. Clita erat ipsum et lorem et sit
                 </p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -256,36 +244,10 @@
             <div class="mb-4">
               <h4>Categories</h4>
               <ul class="list-unstyled fruite-categorie">
-                <li>
+                <li *ngFor="let item of categories">
                   <div class="d-flex justify-content-between fruite-name">
-                    <a href="#"><i class="fas fa-apple-alt me-2"></i>Apples</a>
-                    <span>(3)</span>
-                  </div>
-                </li>
-                <li>
-                  <div class="d-flex justify-content-between fruite-name">
-                    <a href="#"><i class="fas fa-apple-alt me-2"></i>Oranges</a>
-                    <span>(5)</span>
-                  </div>
-                </li>
-                <li>
-                  <div class="d-flex justify-content-between fruite-name">
-                    <a href="#"
-                      ><i class="fas fa-apple-alt me-2"></i>Strawbery</a
-                    >
-                    <span>(2)</span>
-                  </div>
-                </li>
-                <li>
-                  <div class="d-flex justify-content-between fruite-name">
-                    <a href="#"><i class="fas fa-apple-alt me-2"></i>Banana</a>
-                    <span>(8)</span>
-                  </div>
-                </li>
-                <li>
-                  <div class="d-flex justify-content-between fruite-name">
-                    <a href="#"><i class="fas fa-apple-alt me-2"></i>Pumpkin</a>
-                    <span>(5)</span>
+                    <a><i class="fas fa-apple-alt me-2"></i>{{ item.name }}</a>
+                    <span>{{ item.totalProducts }}</span>
                   </div>
                 </li>
               </ul>
@@ -293,7 +255,10 @@
           </div>
           <div class="col-lg-12">
             <h4 class="mb-4">Featured products</h4>
-            <div class="d-flex align-items-center justify-content-start">
+            <div
+              class="d-flex align-items-center justify-content-start"
+              *ngFor="let item of bestSellingProducts"
+            >
               <div class="rounded" style="width: 100px; height: 100px">
                 <img
                   src="assets/img/featur-1.jpg"
@@ -302,7 +267,7 @@
                 />
               </div>
               <div>
-                <h6 class="mb-2">Big Banana</h6>
+                <h6 class="mb-2">{{ item.name }}</h6>
                 <div class="d-flex mb-2">
                   <i class="fa fa-star text-secondary"></i>
                   <i class="fa fa-star text-secondary"></i>
@@ -311,14 +276,14 @@
                   <i class="fa fa-star"></i>
                 </div>
                 <div class="d-flex mb-2">
-                  <h5 class="fw-bold me-2">2.99 $</h5>
-                  <h5 class="text-danger text-decoration-line-through">
+                  <h5 class="fw-bold me-2">{{ item.price }} $</h5>
+                  <!-- <h5 class="text-danger text-decoration-line-through">
                     4.11 $
-                  </h5>
+                  </h5> -->
                 </div>
               </div>
             </div>
-            <div class="d-flex align-items-center justify-content-start">
+            <!-- <div class="d-flex align-items-center justify-content-start">
               <div class="rounded" style="width: 100px; height: 100px">
                 <img
                   src="assets/img/featur-2.jpg"
@@ -445,11 +410,11 @@
             </div>
             <div class="d-flex justify-content-center my-4">
               <a
-                href="#"
+                
                 class="btn border border-secondary px-4 py-3 rounded-pill text-primary w-100"
                 >Vew More</a
               >
-            </div>
+            </div> -->
           </div>
           <div class="col-lg-12">
             <div class="position-relative">
