--- a/front-end/src/app/components/internal/topnav/topnav.component.html
+++ b/front-end/src/app/components/internal/topnav/topnav.component.html
@@ -5,21 +5,21 @@
       <div class="top-info ps-2">
         <small class="me-3"
           ><i class="fas fa-map-marker-alt me-2 text-secondary"></i>
-          <a href="#" class="text-white">123 Street, New York</a></small
+          <a class="text-white">123 Street, New York</a></small
         >
         <small class="me-3"
           ><i class="fas fa-envelope me-2 text-secondary"></i
-          ><a href="#" class="text-white">EmailExample.com</a></small
+          ><a class="text-white">EmailExample.com</a></small
         >
       </div>
-      <div class="top-link pe-2">
-        <a href="#" class="text-white"
+      <div class="top-link pe-2" routerLink="privacy">
+        <a class="text-white"
           ><small class="text-white mx-2">Privacy Policy</small>/</a
         >
-        <a href="#" class="text-white"
+        <a class="text-white"
           ><small class="text-white mx-2">Terms of Use</small>/</a
         >
-        <a href="#" class="text-white"
+        <a class="text-white"
           ><small class="text-white ms-2">Sales and Refunds</small></a
         >
       </div>
@@ -47,7 +47,7 @@
           > -->
           <!-- <div class="nav-item dropdown">
             <a
-              href="#"
+              
               class="nav-link dropdown-toggle"
               data-bs-toggle="dropdown"
               >Pages</a
@@ -59,7 +59,7 @@
               <a href="404.html" class="dropdown-item">404 Page</a>
             </div>
           </div> -->
-          <a href="contact.html" class="nav-item nav-link">Contact</a>
+          <a routerLink="/contact" class="nav-item nav-link">Contact</a>
         </div>
         <div class="d-flex m-3 me-0">
           <button
@@ -78,7 +78,7 @@
               >7</span
             >
           </a>
-          <a href="#" class="my-auto">
+          <a class="my-auto">
             <i class="fas fa-user fa-2x"></i>
           </a>
         </div>
