--- a/front-end/src/app/components/main/shop/shop.component.html
+++ b/front-end/src/app/components/main/shop/shop.component.html
@@ -41,7 +41,7 @@
         <div class="row g-4">
           <div class="col-lg-3">
             <div class="row g-4">
-              <div class="col-lg-12">
+              <!-- <div class="col-lg-12">
                 <div class="mb-3">
                   <h4>Categories</h4>
                   <ul class="list-unstyled fruite-categorie">
@@ -110,8 +110,8 @@
                     >0</output
                   >
                 </div>
-              </div>
-              <div class="col-lg-12">
+              </div> -->
+              <!-- <div class="col-lg-12">
                 <div class="mb-3">
                   <h4>Additional</h4>
                   <div class="mb-2">
@@ -165,19 +165,18 @@
                     <label for="Categories-5"> Expired</label>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="col-lg-12">
                 <h4 class="mb-3">Featured products</h4>
-                <div class="d-flex align-items-center justify-content-start">
+                <div
+                  class="d-flex align-items-center justify-content-start"
+                  *ngFor="let item of bestSellingProducts"
+                >
                   <div class="rounded me-4" style="width: 100px; height: 100px">
-                    <img
-                      src="assets/img/featur-1.jpg"
-                      class="img-fluid rounded"
-                      alt=""
-                    />
+                    <img [src]="item.image" class="img-fluid rounded" alt="" />
                   </div>
                   <div>
-                    <h6 class="mb-2">Big Banana</h6>
+                    <h6 class="mb-2">{{ item.name }}</h6>
                     <div class="d-flex mb-2">
                       <i class="fa fa-star text-secondary"></i>
                       <i class="fa fa-star text-secondary"></i>
@@ -186,14 +185,14 @@
                       <i class="fa fa-star"></i>
                     </div>
                     <div class="d-flex mb-2">
-                      <h5 class="fw-bold me-2">2.99 $</h5>
-                      <h5 class="text-danger text-decoration-line-through">
+                      <h5 class="fw-bold me-2">{{ item.price }} $</h5>
+                      <!-- <h5 class="text-danger text-decoration-line-through">
                         4.11 $
-                      </h5>
+                      </h5> -->
                     </div>
                   </div>
                 </div>
-                <div class="d-flex align-items-center justify-content-start">
+                <!-- <div class="d-flex align-items-center justify-content-start">
                   <div class="rounded me-4" style="width: 100px; height: 100px">
                     <img
                       src="assets/img/featur-2.jpg"
@@ -249,7 +248,7 @@
                     class="btn border border-secondary px-4 py-3 rounded-pill text-primary w-100"
                     >Vew More</a
                   >
-                </div>
+                </div> -->
               </div>
               <div class="col-lg-12">
                 <div class="position-relative">
@@ -274,11 +273,14 @@
           </div>
           <div class="col-lg-9">
             <div class="row g-4 justify-content-center">
-              <div class="col-md-6 col-lg-6 col-xl-4">
+              <div
+                class="col-md-6 col-lg-6 col-xl-4"
+                *ngFor="let item of products"
+              >
                 <div class="rounded position-relative fruite-item">
                   <div class="fruite-img">
                     <img
-                      src="assets/img/fruite-item-5.jpg"
+                      [src]="item.image"
                       class="img-fluid w-100 rounded-top"
                       alt=""
                     />
@@ -287,18 +289,19 @@
                     class="text-white bg-secondary px-3 py-1 rounded position-absolute"
                     style="top: 10px; left: 10px"
                   >
-                    Fruits
+                    {{ item.category.name }}
                   </div>
                   <div
                     class="p-4 border border-secondary border-top-0 rounded-bottom"
                   >
-                    <h4>Grapes</h4>
+                    <h4>{{ item.name }}</h4>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit
-                      sed do eiusmod te incididunt
+                      {{ item.description }}
                     </p>
                     <div class="d-flex justify-content-between flex-lg-wrap">
-                      <p class="text-dark fs-5 fw-bold mb-0">$4.99 / kg</p>
+                      <p class="text-dark fs-5 fw-bold mb-0">
+                        {{ item.price }} / {{ item.units }}
+                      </p>
                       <a
                         href="#"
                         class="btn border border-secondary rounded-pill px-3 text-primary"
@@ -309,7 +312,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-6 col-lg-6 col-xl-4">
+              <!-- <div class="col-md-6 col-lg-6 col-xl-4">
                 <div class="rounded position-relative fruite-item">
                   <div class="fruite-img">
                     <img
@@ -378,8 +381,8 @@
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-6 col-lg-6 col-xl-4">
+              </div> -->
+              <!-- <div class="col-md-6 col-lg-6 col-xl-4">
                 <div class="rounded position-relative fruite-item">
                   <div class="fruite-img">
                     <img
@@ -588,7 +591,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="col-12">
                 <div class="pagination d-flex justify-content-center mt-5">
                   <a href="#" class="rounded">&laquo;</a>
