--- a/front-end/src/app/components/internal/topnav/topnav.component.html
+++ b/front-end/src/app/components/internal/topnav/topnav.component.html
@@ -75,7 +75,7 @@
               id="cart"
               class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
               style="top: -5px; left: 15px; height: 20px; min-width: 20px"
-              >7</span
+              >{{ itemsInCart }}</span
             >
           </a>
           <a class="my-auto">
