--- a/front-end/src/app/components/main/bestseller/bestseller.component.html
+++ b/front-end/src/app/components/main/bestseller/bestseller.component.html
@@ -30,7 +30,7 @@
               </div>
               <h4 class="mb-3">{{ item.price }} $</h4>
               <a
-                href="#"
+                (click)="commonService.addToLocalStorageIfNotPresent(item._id)"
                 class="btn border border-secondary rounded-pill px-3 text-primary"
                 ><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to
                 cart</a
