--- a/front-end/src/app/components/main/fruitshop/fruitshop.component.html
+++ b/front-end/src/app/components/main/fruitshop/fruitshop.component.html
@@ -93,10 +93,7 @@
                   class="col-md-6 col-lg-4 col-xl-3"
                   *ngFor="let item of products"
                 >
-                  <div
-                    class="rounded position-relative fruite-item"
-                    (click)="getProductById(item._id)"
-                  >
+                  <div class="rounded position-relative fruite-item">
                     <div class="fruite-img">
                       <img
                         [src]="item.image"
@@ -113,7 +110,9 @@
                     <div
                       class="p-4 border border-secondary border-top-0 rounded-bottom"
                     >
-                      <h4>{{ item.name }}</h4>
+                      <h4 (click)="getProductById(item._id)">
+                        {{ item.name }}
+                      </h4>
                       <p>
                         {{ item.description }}
                       </p>
@@ -122,7 +121,11 @@
                           ₹{{ item.price }}/{{ item.units }}
                         </p>
                         <a
-                          href="#"
+                          (click)="
+                            commonService.addToLocalStorageIfNotPresent(
+                              item._id
+                            )
+                          "
                           class="btn border border-secondary rounded-pill px-3 text-primary"
                           ><i class="fa fa-shopping-bag me-2 text-primary"></i>
                           Add to cart</a
