--- a/front-end/src/app/components/main/shop/shop.component.html
+++ b/front-end/src/app/components/main/shop/shop.component.html
@@ -303,7 +303,9 @@
                         {{ item.price }} / {{ item.units }}
                       </p>
                       <a
-                        href="#"
+                        (click)="
+                          commonService.addToLocalStorageIfNotPresent(item._id)
+                        "
                         class="btn border border-secondary rounded-pill px-3 text-primary"
                         ><i class="fa fa-shopping-bag me-2 text-primary"></i>
                         Add to cart</a
