--- a/front-end/src/app/components/main/single-product/single-product.component.html
+++ b/front-end/src/app/components/main/single-product/single-product.component.html
@@ -52,6 +52,7 @@
               </div>
             </div>
             <a
+              (click)="commonService.addToLocalStorageIfNotPresent(product._id)"
               class="btn border border-secondary rounded-pill px-4 py-2 mb-4 text-primary"
               ><i class="fa fa-shopping-bag me-2 text-primary"></i> Add to
               cart</a
