--- a/front-end/src/app/components/main/cart/cart.component.html
+++ b/front-end/src/app/components/main/cart/cart.component.html
@@ -46,47 +46,64 @@
             </td>
           </tr> -->
 
-        <tr *ngFor="let item of cartItems">
-          <th scope="row">
-            <div class="d-flex align-items-center">
-              <img [src]="item.image" class="img-fluid me-5 rounded-circle" style="width: 80px; height: 80px;" alt="">
-            </div>
-          </th>
-          <td>
-            <p class="mb-0 mt-4">{{item.name}}</p>
-          </td>
-          <td>
-            <p class="mb-0 mt-4">{{item.price}}</p>
-          </td>
-          <td>
-            <div class="input-group quantity mt-4" style="width: 100px;">
-              <div class="input-group-btn">
-                <!-- Decrement button, bound to decrementQuantity -->
-                <button class="btn btn-sm btn-minus rounded-circle bg-light border" (click)="decrementQuantity(item)">
-                  <i class="fa fa-minus"></i>
-                </button>
+          <tr *ngFor="let item of cartItems">
+            <th scope="row">
+              <div class="d-flex align-items-center">
+                <img
+                  [src]="item.image"
+                  class="img-fluid me-5 rounded-circle"
+                  style="width: 80px; height: 80px"
+                  alt=""
+                />
               </div>
-              <!-- Two-way data binding for the quantity input field -->
-              <input type="text" class="form-control form-control-sm text-center border-0" [(ngModel)]="item.quantity">
-              <div class="input-group-btn">
-                <!-- Increment button, bound to incrementQuantity -->
-                <button class="btn btn-sm btn-plus rounded-circle bg-light border" (click)="incrementQuantity(item)">
-                  <i class="fa fa-plus"></i>
-                </button>
+            </th>
+            <td>
+              <p class="mb-0 mt-4">{{ item.name }}</p>
+            </td>
+            <td>
+              <p class="mb-0 mt-4">{{ item.price }}</p>
+            </td>
+            <td>
+              <div class="input-group quantity mt-4" style="width: 100px">
+                <div class="input-group-btn">
+                  <!-- Decrement button, bound to decrementQuantity -->
+                  <button
+                    class="btn btn-sm btn-minus rounded-circle bg-light border"
+                    (click)="decrementQuantity(item)"
+                  >
+                    <i class="fa fa-minus"></i>
+                  </button>
+                </div>
+                <!-- Two-way data binding for the quantity input field -->
+                <input
+                  type="text"
+                  class="form-control form-control-sm text-center border-0"
+                  [(ngModel)]="item.quantity"
+                />
+                <div class="input-group-btn">
+                  <!-- Increment button, bound to incrementQuantity -->
+                  <button
+                    class="btn btn-sm btn-plus rounded-circle bg-light border"
+                    (click)="incrementQuantity(item)"
+                  >
+                    <i class="fa fa-plus"></i>
+                  </button>
+                </div>
               </div>
-            </div>
-          </td>
-          <td>
-            <!-- Total price calculated based on quantity -->
-            <p class="mb-0 mt-4">${{ item.price * item.quantity }}</p>
-          </td>
-          <td>
-            <button class="btn btn-md rounded-circle bg-light border mt-4" (click)="removeProductId(item._id)">
-              <i class="fa fa-times text-danger"></i>
-            </button>
-          </td>
-        </tr>
-
+            </td>
+            <td>
+              <!-- Total price calculated based on quantity -->
+              <p class="mb-0 mt-4">${{ item.price * item.quantity }}</p>
+            </td>
+            <td>
+              <button
+                class="btn btn-md rounded-circle bg-light border mt-4"
+                (click)="removeProductId(item._id)"
+              >
+                <i class="fa fa-times text-danger"></i>
+              </button>
+            </td>
+          </tr>
         </tbody>
       </table>
     </div>
@@ -117,7 +134,7 @@
                   </h1>
                   <div class="d-flex justify-content-between mb-4">
                     <h5 class="mb-0 me-4">Subtotal:</h5>
-                    <p class="mb-0" id="cart-subtotal">${{totalPrice}}</p>
+                    <p class="mb-0" id="cart-subtotal">${{ totalPrice }}</p>
                   </div>
                   <!-- <div class="d-flex justify-content-between">
                     <h5 class="mb-0 me-4">Shipping</h5>
@@ -131,7 +148,7 @@
                   class="py-4 mb-4 border-top border-bottom d-flex justify-content-between"
                 >
                   <h5 class="mb-0 ps-4 me-4">Total</h5>
-                  <p class="mb-0 pe-4" id="cart-total">{{totalPrice}}</p>
+                  <p class="mb-0 pe-4" id="cart-total">{{ totalPrice }}</p>
                 </div>
                 <button
                   class="btn border-secondary rounded-pill px-4 py-3 text-primary text-uppercase mb-4 ms-4 btn-proceed-checkout"
