--- a/sp.css
+++ b/sp.css
@@ -427,7 +427,7 @@ label.radio input:checked + span {
   background-color: #000;
 }
 
-.best-seller .buy-now a {
+.best-seller .add-to-cart a {
   text-decoration: none;
   color: var(--white);
 }
@@ -436,7 +436,7 @@ label.radio input:checked + span {
   color: #f05e8a;
 }
 
-.best-seller .buy-now button,
+.best-seller .add-to-cart button,
 .best-seller .add-cart button {
   padding: 10px 15px;
   margin-top: 5px;
@@ -452,13 +452,13 @@ label.radio input:checked + span {
   transition: 0.5s;
 }
 
-.best-seller .buy-now button:hover,
+.best-seller .add-to-cart button:hover,
 .best-seller .add-cart button:hover {
   background-color: var(--white);
   font-weight: 600;
 }
 
-.best-seller .buy-now button:hover a,
+.best-seller .add-to-cart button:hover a,
 .best-seller .add-cart button:hover a {
   color: #f05e8a;
 }
