--- a/styles/sp.css
+++ b/styles/sp.css
@@ -879,6 +879,10 @@ iframe {
 .eye-icon:hover::after {
   opacity: 1;
 }
+ .navbar-container .logo img {
+   right: 15px;
+   max-height: 60px;
+ }
 
 /* Hide the eye icon initially on large screens (lg and above) */
 @media (min-width: 992px) {
@@ -897,5 +901,19 @@ iframe {
   .eye-icon {
     opacity: 1;
     top: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .navbar-container .logo img {
+      top: 2;
+      right: 10px;
+      max-height: 50px;
+    }
+}
+@media (max-width: 500px) {
+.navbar-container .logo img {
+  top: 2;
+    right: 10px;
+    max-height: 50px;
   }
 }
